# challenges

./: .gitattributes  .gitignore  README.org
adventofcode/23/: Makefile  README.md  day1.gold.awk  day1.silver.awk  day10.gold.awk  day10.silver.awk  day10vis.sh  day11.gold.awk  day11.silver.awk  day12.gold.awk  day12.silver.awk  day13.gold.awk  day13.silver.awk  day13vis.sh  day14.gold.awk  day14.silver.awk  day14vis.sh  day15.gold.awk  day15.silver.awk  day16.gold.awk  day16.silver.awk  day17.silver.awk  day17.silver.lisp  day18.gold.lisp  day18.gold.vis.awk  day18.silver.lisp  day18.silver.vis.awk  day19.gold.lisp  day19.silver.awk  day2.awk  day2.gold.awk  day2.silver.awk  day20.silver.lisp  day21.silver.lisp  day22.silver.lisp  day23.gold.lisp  day23.silver.lisp  day24.gold.lisp  day24.silver.lisp  day25.silver.lisp  (+16 more)
adventofcode/24/: NOTES.org  day01.1.awk  day01.2.awk  (+18 more)
algoexpert/: .gitignore  TwoSum.java  branch_sums.ml  validate_subsequence.py
cmdchallenge/: README.md
cryptopals/: README.org
hackerrank/: divisible-sum-pairs.py  fractal-trees.sh  number-line-jumps.py  the-birthday-bar.py
hanukkah/: 0.txt  01.jq  02.jq  03.jq  04.jq  05.awk  05.sql  06.sql  07.sql  07.txt  08.sql  1.txt  2.txt  3.txt  4.txt  5.awk  5.sql  5.txt  6.txt  8.txt  Makefile  README.md
lisperati/: README.md  lisperati.asd
ocaml/: challenges.opam  dune-project
ocaml/aoc2022/: Day1.java  day1.go  day1.lisp  day1.ml  day10.lisp  day2.ml  day3.ml  day4.ml  day5.ml  day6.ml  day7.ml  day8.ml  day9.lisp  dune
ocaml/codewars/: code1.ml  code10.ml  code11.ml  code12.ml  code13.ml  code14.ml  code2.ml  code3.ml  code4.ml  code5.ml  code6.ml  code7.ml  code8.ml  code9.ml  dune
ocaml/lib/: aoc.ml  aoc.mli
pi/: 1.dc  1.iterative.bc  1.recursive.bc  2.bc  4.awk  README.md
protohackers/: 01_prime_time.txt  02_means_to_an_end.md  Makefile  README.md  README.org
ts/: package.json  tsconfig.json
upwork/: README.md  TODO.org  splitcsv.sh
(+428 files in other folders)
