(lang dune 2.9)

(name challenges)
(version 1.0.4)

(generate_opam_files true)
(license MIT)
(source (github azimut/challenges))
(authors "azimut")
(homepage "https://github.com/azimut/challenges")
(bug_reports "https://github.com/azimut/challenges/issues")
(maintainers "azimut.github@protonmail.com")

(package
 (name challenges)
 (synopsis "coding challenges")
 (depends batteries))
